@@ -10,7 +10,7 @@ format will NOT be compatible with existing implementations.
 
 2. Format: A V3 format PasswordSafe will be structured as follows:
 
-	TAG|SALT|ITER|H(P')|B1|B2|B3|B4|IV|HDR|R1|R2|...|Rn|EOF|HMAC
+    TAG|SALT|ITER|H(P')|B1|B2|B3|B4|IV|HDR|R1|R2|...|Rn|EOF|HMAC
 
 Where:
 
@@ -85,14 +85,14 @@ are filled with random values. The type of a field also defines the data
 representation.
 
 3.1 Field types for database header (based on the v2 format):
-												Currently
-Name						Value		Type	Implemented		Comments
+                                                 Currently
+Name                        Value        Type    Implemented      Comments
 --------------------------------------------------------------------------
-Version						0x00		%02x		Y				[1]
-UUID						0x01		UUID		Y				[2]
-Non-default preferences		0x02		Text		Y				[3]
-Tree Display Status			0x03		Text		Y				[4]
-End of Entry				0xff		[empty]		Y				[5]
+Version                     0x00        %02x          Y              [1]
+UUID                        0x01        UUID          Y              [2]
+Non-default preferences     0x02        Text          Y              [3]
+Tree Display Status         0x03        Text          Y              [4]
+End of Entry                0xff        [empty]       Y              [5]
 
 [1] The version number of the database format. For this version, the value
 is 0x0300 (stored in little-endian format, that is, 0x00, 0x03).
@@ -119,25 +119,25 @@ displayed completely expanded or collapsed. Implemented in V3.03 and later.
 without breaking backwards compatability.
 
 3.2 Field types for database Records (based on the v2 format):
-												Currently
-Name						Value		Type	Implemented		Comments
+                                                 Currently
+Name                        Value        Type    Implemented      Comments
 --------------------------------------------------------------------------
-UUID						0x01		UUID		Y				[1]
-Group						0x02		Text		Y				[2]
-Title						0x03		Text		Y
-Username					0x04		Text		Y
-Notes						0x05		Text		Y
-Password					0x06		Text		Y
-Creation Time				0x07		time_t		Y				[3]
-Password Modification Time	0x08		time_t		Y				[3]
-Last Access Time			0x09		time_t		Y				[3,4]
-Password Lifetime			0x0a		time_t		Y				[3,5]
-Password Policy				0x0b		4 bytes		N				[6]
-Last Modification Time		0x0c		time_t		Y				[3,7]
-URL							0x0d		Text		Y				[8]
-Autotype					0x0e		Text		Y				[9]
-Password History			0x0f		Text		Y				[10]
-End of Entry				0xff		[empty]		Y				[11]
+UUID                        0x01        UUID          Y              [1]
+Group                       0x02        Text          Y              [2]
+Title                       0x03        Text          Y
+Username                    0x04        Text          Y
+Notes                       0x05        Text          Y
+Password                    0x06        Text          Y
+Creation Time               0x07        time_t        Y              [3]
+Password Modification Time  0x08        time_t        Y              [3]
+Last Access Time            0x09        time_t        Y              [3,4]
+Password Lifetime           0x0a        time_t        Y              [3,5]
+Password Policy             0x0b        4 bytes       N              [6]
+Last Modification Time      0x0c        time_t        Y              [3,7]
+URL                         0x0d        Text          Y              [8]
+Autotype                    0x0e        Text          Y              [9]
+Password History            0x0f        Text          Y              [10]
+End of Entry                0xff        [empty]       Y              [11]
 
 [1] As per UUID in the HDR above.
 
@@ -186,18 +186,19 @@ at runtime, and is not stored in the database.
 [10] Pasword History is an optional record. If it exists, it stores the
 creation times and values of the last few passwords used in the current
 entry, in the following format:
-	"fmmnnTLPTLP...TLP" Where:
-	f  = {0,1} if password history is on/off
-	mm = 2 hexadecimal digits max size of history list (i.e. max = 255)
-	nn = 2 hexadecimal digits current size of history list
-	T  = Time password was set ("yyyy/mm/dd hh:mm:ss")
-	L  = 4 hexadecimal digit password length (in TCHAR)
-	P  = Password
+    "fmmnnTLPTLP...TLP"
+where:
+    f  = {0,1} if password history is on/off
+    mm = 2 hexadecimal digits max size of history list (i.e. max = 255)
+    nn = 2 hexadecimal digits current size of history list
+    T  = Time password was set ("yyyy/mm/dd hh:mm:ss")
+    L  = 4 hexadecimal digit password length (in TCHAR)
+    P  = Password
 No history being kept for a record can be represented either by the lack of
 the PWH field (preferred), or by a header of _T("00000"):
-	flag = 0, max = 00, num = 00
-Note that 0aabb where bb <= aa is possible if password history was enabled in
-the past and has then been disabled but the history hasn't been cleared.
+    flag = 0, max = 00, num = 00
+Note that 0aabb, where bb <= aa, is possible if password history was enabled
+in the past and has then been disabled but the history hasn't been cleared.
 
 [11] An explicit end of entry field is useful for supporting new fields
 without breaking backwards compatability.
