@@ -246,6 +246,8 @@
 #define IDC_TREE_DISPLAY_COLLAPSED      1198
 #define IDC_TREE_DISPLAY_EXPANDED       1199
 #define IDC_TREE_DISPLAY_LASTSAVE       1200
+#define IDC_PWHSTATUS                   1201
+#define IDC_PWHMAX                      1202
 #define IDC_DOUBLE_CLICK_COPIES         2089
 #define IDC_DOUBLE_CLICK_EDITS          2090
 #define IDC_DOUBLE_CLICK_AUTOTYPES      2091
@@ -340,7 +342,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        232
 #define _APS_NEXT_COMMAND_VALUE         32860
-#define _APS_NEXT_CONTROL_VALUE         1201
+#define _APS_NEXT_CONTROL_VALUE         1203
 #define _APS_NEXT_SYMED_VALUE           105
 #endif
 #endif
